--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pandas==2.2.2
-numpy==2.1.1
-matplotlib==3.9.2
-seaborn==0.13.2
-scipy==1.14.1
-scikit-learn==1.5.2
-imbalanced-learn==0.12.4
-yellowbrick==1.5
-streamlit==1.36.0
+pandas
+numpy
+matplotlib
+seaborn
+scipy
+scikit-learn
+imbalanced-learn
+yellowbrick
+gdown
+streamlit
